--- a/index.html
+++ b/index.html
@@ -34,12 +34,85 @@
   <!-- Banner Section -->
   <section class="banner">
     <h2 >Dragon Ball Episodes</h2>
-	<p><iframe src="https://drive.google.com/file/d/1YpJa1rfofXC4LkluTeVAkDVVaIKiXT7M/preview" width="640" height="480"></iframe><br>Episode 1</p>
-  </section>
-  <!-- Footer Section -->
-  <section class="footer_banner" id="contact">
-    <h2 class="hidden">Footer Banner Section </h2>
-    <div>
+	<div class="thumbnail">
+	  <p><iframe src="https://drive.google.com/file/d/1YpJa1rfofXC4LkluTeVAkDVVaIKiXT7M/preview" width="auto" height="auto"></iframe></p>
+      <h4>Episode 1</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="https://drive.google.com/file/d/1z-M-BSF0S8bDxR-jAZkDbAol9WbuoQ3a/preview" width="auto" height="auto"></iframe></p>
+      <h4>Episode 2</h4>
+      <p></p>
+    </div>
+	<div class="thumbnail">
+	  <p><iframe src="https://drive.google.com/file/d/1Yl1DZocHPHNSvlP6O703KBoc3TA-_As3/preview" width="auto" height="auto"></iframe></p>
+      <h4>Episode 3</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="https://drive.google.com/file/d/1bUFIM6mh0UWZU6M8qwUdJlUjQIDT4bq5/preview" width="auto" height="auto"></iframe></p>
+      <h4>Episode 4</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="https://drive.google.com/file/d/1Fll4ek5oO1YI214SJ4EbSsa16XwqURjm/preview" width="auto" height="auto"></iframe></p>
+      <h4>Episode 5</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="https://drive.google.com/file/d/14dAGaK7MOBRBDvRAUi_guM7K0KJ6r94o/preview" width="auto" height="auto"></iframe></p>
+      <h4>Episode 6</h4>
+      <p></p>
+    </div>
+	<div class="thumbnail">
+	  <p><iframe src="https://drive.google.com/file/d/1-RYoubhQ1etRFt-EHQMIiBjtf3aHiite/preview" width="auto" height="auto"></iframe></p>
+      <h4>Episode 7</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="https://drive.google.com/file/d/1w-QVdolKk93oo_LK_lRCvsUjplwDOUxS/preview" width="auto" height="auto"></iframe></p>
+      <h4>Episode 8</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="" width="auto" height="auto"></iframe></p>
+      <h4>Episode 9</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="" width="auto" height="auto"></iframe></p>
+      <h4>Episode 10</h4>
+      <p></p>
+    </div>
+	<div class="thumbnail">
+	  <p><iframe src="" width="auto" height="auto"></iframe></p>
+      <h4>Episode 11</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="" width="auto" height="auto"></iframe></p>
+      <h4>Episode 12</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="" width="auto" height="auto"></iframe></p>
+      <h4>Episode 13</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="" width="auto" height="auto"></iframe></p>
+      <h4>Episode 14</h4>
+      <p></p>
+    </div>
+	<div class="thumbnail">
+	  <p><iframe src="" width="auto" height="auto"></iframe></p>
+      <h4>Episode 15</h4>
+      <p></p>
+	</div>
+	<div class="thumbnail">
+	  <p><iframe src="" width="auto" height="auto"></iframe></p>
+      <h4>Episode 16</h4>
+      <p></p>
 	</div>
   </section>
 </div>
